rubocop: Disable the `Metrics/BlockLength` cop for all '*_spec.rb' files.
Note: Since spec files tend to have long blocks. it seems preferable to explicitly disable this cop for those files, in order to be able to set a lower project-wide limit (which will apply to non-spec files).

--- a/src/bosh_azure_cpi/.rubocop.yml
+++ b/src/bosh_azure_cpi/.rubocop.yml
@@ -87,8 +87,7 @@ Lint/UselessRuby2Keywords: # new in 1.23
 
 Metrics/BlockLength:
   Exclude:
-    #- '**/*_spec.rb'
-    - 'spec/unit/azure_client/get_operation_spec.rb'
+    - '**/*_spec.rb'
 
 RSpec/ExcessiveDocstringSpacing: # new in 2.5
   Enabled: true
