rubocop: Disable the `Metrics/BlockLength` cop for 'shared_stuff.rb'.
Note: Although this file is not technically a spec file, it has rspec content, and should therefore be subject to similar rubocop config as the '*_spec.rb' files (which are already excluded from this same cop).

--- a/src/bosh_azure_cpi/.rubocop.yml
+++ b/src/bosh_azure_cpi/.rubocop.yml
@@ -87,6 +87,7 @@ Lint/UselessRuby2Keywords: # new in 1.23
 
 Metrics/BlockLength:
   Exclude:
+    - 'spec/unit/vm_manager/create/shared_stuff.rb'
     - '**/*_spec.rb'
 
 RSpec/ExcessiveDocstringSpacing: # new in 2.5
